# postgresql-12.0-postgres-clion

./: CMakeLists.txt  README.md
lib/: libecpg.so.6.12  libecpg_compat.so.3.12  libpgtypes.so.3.12  libpq.so.5.12
lib/pgxs/src/: Makefile.global
lib/pgxs/src/test/regress/: pg_regress
lib/pkgconfig/: libecpg.pc  libecpg_compat.pc  libpgtypes.pc  libpq.pc
utils/adt/: like_match.c
